--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.10",
-    "enxpress": "^4.19.2",
+    "express": "^4.19.2",
     "mysql2": "^3.11.0",
     "nodemon": "^3.1.4"
   }
